# api-ecomerce

./: .env-sample  .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  diesel.toml  ecommerce.json  env
api/: Cargo.toml
api/src/: business_handler.rs  invoice_handler.rs  jwt_handler.rs  lib.rs  nodes_handler.rs  swagger.rs  test_handler.rs  utils.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/bitcoin/: mod.rs  read.rs
application/src/business/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/configuration/: mod.rs  read.rs
application/src/invoice/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/nodes/: create.rs  delete.rs  mod.rs  read.rs  update.rs
db/: init-user-db.sh
domain/: Cargo.toml
domain/src/: lib.rs  models.rs  modelsext.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2023-10-20-020915_business/: down.sql  up.sql
infrastructure/migrations/2023-10-23-192826_nodes/: down.sql  up.sql
infrastructure/src/: lib.rs
logs/: API_Ecommerce.logging.2024-07-29  API_Ecommerce.logging.2024-07-30
shared/: Cargo.toml
shared/src/: authorization.rs  error_handler.rs  generate_numbers.rs  lib.rs  response_models.rs  settings.rs
shared/src/config/: Default.toml  Development.toml  Production.toml  Testing.toml
