# api/Cargo.toml

[package]
name = "api"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
application = { path = "../application" }

actix-web = "4.3.1"
actix-rt = "2.8.0"
serde_json = "1.0.88"
listenfd = "1.0.1"
dotenvy = "0.15.6"

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
diesel_migrations = "2.1.0"
migrations_macros = "2.1.0"

tokio = { version = "1.23.0", features = ["full"] }
serde = {version = "1.0.156", features = ["derive"] }

chrono = "0.4.23"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

utoipa = { features = ["actix_extras"], version = "3.1.1" }
utoipa-swagger-ui = { features = ["actix-web"], version = "3.1.1" }

jsonwebtoken = "9.2.0"