# application/Cargo.toml

[package]
name = "application"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}

reqwest = { version = "0.11.13", features = ["json"]}
actix-web = "4.3.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"

chrono = { version = "0.4.24", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"]}
base64 = "0.13"

config = "0.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }