# shared/Cargo.toml

[package]
name = "shared"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
domain = { path = "../domain" }

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}

serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_path_to_error = "0.1.10"
serde_with = "2.3.1"

actix-web = "4.3.1"
actix-rt = "2.8.0"

rand = "0.8.5"
serial-key = "1.0"

anyhow = "1.0"
reqwest = { version = "0.11.13", features = ["blocking", "socks", "rustls-tls"]}

tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
config = "0.10"
lazy_static = "1.4"

dotenv = "0.15"
base64 = "0.13"