# shared/Cargo.toml

[package]
name = "shared"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
domain = { path = "../domain" }

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

reqwest = { version = "0.11.13", features = ["blocking", "socks", "rustls-tls"]}
anyhow = "1.0"
actix-web = "4.3.1"

rand = "0.8.5"
serial-key = "1.0"
dotenv = "0.15"
base64 = "0.13"
config = "0.10"
lazy_static = "1.4"

jsonwebtoken = "9.2.0"